tests/expectations/compiler/address/gte_fail.out
DCE_ENABLED:
Error [ETYC0372117]: Expected a field, scalar, or integer but type `address` was found.
    --> compiler-test:6:16
     |
   6 |         return x >= sender;
     |                ^
Error [ETYC0372117]: Expected a field, scalar, or integer but type `address` was found.
    --> compiler-test:6:21
     |
   6 |         return x >= sender;
     |                     ^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372117]: Expected a field, scalar, or integer but type `address` was found.
    --> compiler-test:6:16
     |
   6 |         return x >= sender;
     |                ^
Error [ETYC0372117]: Expected a field, scalar, or integer but type `address` was found.
    --> compiler-test:6:21
     |
   6 |         return x >= sender;
     |                     ^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
